test/e2e/backends/grpc-echo.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-echo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grpc-echo
  template:
    metadata:
      labels:
        app: grpc-echo
    spec:
      containers:
        - name: kat-server
          image: (env('KAT_SERVER_IMAGE'))
          imagePullPolicy: IfNotPresent
          command: ["/work/kat-server"]
          env:
            - name: BACKEND
              value: grpc-echo
            - name: KAT_BACKEND_TYPE
              value: grpc_echo
          ports:
            - containerPort: 8080
              name: grpc
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: grpc-echo
spec:
  selector:
    app: grpc-echo
  ports:
    - name: grpc
      port: 8080
      targetPort: 8080
      protocol: TCP
      appProtocol: grpc
