test/e2e/fixtures/grpc-basic/manifests.yaml
---
apiVersion: getambassador.io/v3alpha1
kind: Mapping
metadata:
  name: grpc-echo
spec:
  ambassador_id: [(env('SLOT'))]
  hostname: "*"
  prefix: /echo.EchoService/
  rewrite: ""
  grpc: true
  service: grpc-echo:8080
